--- a/4-DOM-pig-game/starter/style.css
+++ b/4-DOM-pig-game/starter/style.css
@@ -177,11 +177,21 @@ i {
 .dice {
     position: absolute;
     left: 50%;
-    top: 178px;
+    top: 250px;
     transform: translateX(-50%);
-    height: 100px;
+    height: 80px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
+
+.dice-1 {
+    position: absolute;
+    left: 50%;
+    top: 145px;
+    transform: translateX(-50%);
+    height: 80px;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+}
+
 
 .winner {
     background-color: #f7f7f7;
